kubernetes/zabbix.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: zabbix
---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: Role
# metadata:
#   name: zabbix-agent
#   namespace: monitoring
# rules:
# - verbs:
#   - use
#   apiGroups:
#   - security.openshift.io
#   resources:
#   - securitycontextconstraints
#   resourceNames:
#   - privileged
#   - hostaccess
#   - hostnetwork
# ---
# kind: RoleBinding
# apiVersion: rbac.authorization.k8s.io/v1
# metadata:
#   name: zabbix-agent
#   namespace: monitoring
# subjects:
# - kind: ServiceAccount
#   name: zabbix-agent
# roleRef:
#   kind: Role
#   name: zabbix-agent
#   apiGroup: rbac.authorization.k8s.io
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: zabbix-agent
#   namespace: monitoring
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-ingress
  labels:
    app: zabbix
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: zabbix.portugal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-web
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-java-gateway
  labels:
    app: zabbix
  namespace: monitoring
spec:
  ports:
  - port: 10052
    targetPort: 10052
    name: zabbix-jmx
  selector:
    name: zabbix-java-gateway
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-service
  labels:
    app: zabbix
  namespace: monitoring
spec:
  ports:
  - port: 10053
    targetPort: 10053
    name: zabbix-web-svc
  selector:
    name: zabbix-web-service
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: zabbix-agent
#   labels:
#     app: zabbix
#   namespace: monitoring
# spec:
#   ports:
#   - port: 10050
#     targetPort: 10050
#     name: zabbix-agent
#   selector:
#     name: zabbix-agent
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  labels:
    app: zabbix
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: web-http
  - port: 443
    targetPort: 8443
    name: web-https
  selector:
    name: zabbix-web
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-proxy-sqlite3
  labels:
    app: zabbix
  namespace: monitoring
spec:
  ports:
  - port: 10051
    targetPort: 10051
    name: zabbix-trapper
  - port: 162
    targetPort: 1162
    protocol: UDP
    name: snmp-trap
  selector:
    name: zabbix-proxy-sqlite3
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  labels:
    app: zabbix
  namespace: monitoring
spec:
  ports:
  - port: 10051
    targetPort: 10051
    name: zabbix-trapper
  selector:
    name: zabbix-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
  labels:
    app: zabbix
    tier: zabbix-web
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      name: zabbix-web
      app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-web
        app: zabbix
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: zabbix
            tier: zabbix-web
      containers:
      - name: zabbix-web
        image: zabbix/zabbix-web-nginx-pgsql:ol-7.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web-http
        - containerPort: 8443
          name: web-https
        livenessProbe:
          httpGet:
            path: /
            port: web-http
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: web-http
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  labels:
    app: zabbix
    tier: server
    environment: homelab
  namespace: monitoring
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      name: zabbix-server
      app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-server
        app: zabbix
    spec:
      containers:
      - name: zabbix-server
        image: zabbix/zabbix-server-pgsql:ol-7.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 10051
          protocol: TCP
          name: zabbix-trapper
        readinessProbe:
          tcpSocket:
            port: zabbix-trapper
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: zabbix-trapper
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        startupProbe:
          tcpSocket:
            port: 10051
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 40
        securityContext:
          capabilities: {}
          privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-proxy-sqlite3
  labels:
    app: zabbix
    tier: proxy
  namespace: monitoring
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      name: zabbix-proxy-sqlite3
      app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-proxy-sqlite3
        app: zabbix
    spec:
      volumes:
        - name: proxy-sqlite-data
          emptyDir: {}
      containers:
        - name: zabbix-proxy-sqlite3
          image: douglasportugal/zbx-prx-sqlite3:ol-7.0.3
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 10051
            protocol: TCP
            name: zabbix-trapper
          startupProbe:
            tcpSocket:
              port: 10051
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 40
          livenessProbe:
            tcpSocket:
              port: 10051
            timeoutSeconds: 3
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
          - mountPath: "/var/lib/zabbix/db_data"
            name: proxy-sqlite-data
          securityContext:
            capabilities: {}
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web-service
  labels:
    app: zabbix
    tier: web-service
  namespace: monitoring
spec:
  selector:
    matchLabels:
     name: zabbix-web-service
     app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-web-service
        app: zabbix
    spec:
      containers:
        - name: zabbix-web-service
          image: zabbix/zabbix-web-service:ol-7.0.3
          imagePullPolicy: IfNotPresent
          resources:
           limits:
            cpu: 100m
            memory: 512Mi
           requests:
            cpu: 100m
            memory: 512Mi
          ports:
          - containerPort: 10053
            protocol: TCP
            name: zabbix-web-svc
          livenessProbe:
            tcpSocket:
              port: 10053
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 2
          securityContext:
            capabilities: {}
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-java-gateway
  labels:
    app: zabbix
    tier: java
  namespace: monitoring
spec:
  selector:
    matchLabels:
     name: zabbix-java-gateway
     app: zabbix
  template:
    metadata:
      labels:
        name: zabbix-java-gateway
        app: zabbix
    spec:
      containers:
        - name: zabbix-java-gateway
          image: zabbix/zabbix-java-gateway:ol-7.0.3
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 10052
            protocol: TCP
            name: zabbix-java
          livenessProbe:
            tcpSocket:
              port: 10052
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 2
          securityContext:
            capabilities: {}
            privileged: false
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: monitoring
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: monitoring
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
